Fixed post object resource on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2824,7 +2824,8 @@ a.post-object:focus {
   -webkit-box-direction: reverse;
   -webkit-flex-direction: row-reverse;
       -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
+          flex-direction: row-reverse;
+  width: 100%; }
   .post-object--resource .post-object--resource__media {
     display: -webkit-box;
     display: -webkit-flex;
